<resources>

    <string name="app_name">Blitz</string>
    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">625717347571288</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="register_an_account">Register an account</string>
    <string name="login_with_account">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="need_an_account">Need an account?</string>
    <string name="no_username_or_password">Enter username and password</string>
    <string name="title_activity_maps">Map</string>
    <string name="notification_text">Counting your steps</string>
    <string name="count_sensor_not_avail">Count sensor not available!</string>
    <string name="fb_login_pass">fejsbukLogin</string>
    <string name="logout">Logout</string>

    <string name="player_dead">I\'m dead!</string>

    <string name="join_game">Join game</string>
    <string name="joined">Joined</string>

</resources>
