<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:context=".ui.activity.LogInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
                android:id="@+id/progress_smooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-9dp"
                card:spb_stroke_width="8dp"
                android:indeterminate="true"
                style="@style/GNowProgressBar"
                android:layout_marginLeft="@dimen/login_card_margin"
                android:layout_marginStart="@dimen/login_card_margin"
                android:layout_marginRight="@dimen/login_card_margin"
                android:layout_marginEnd="@dimen/login_card_margin"
                android:visibility="gone"
                />

            <android.support.v7.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card:cardCornerRadius="4dp"
                android:layout_marginLeft="@dimen/login_card_margin"
                android:layout_marginStart="@dimen/login_card_margin"
                android:layout_marginRight="@dimen/login_card_margin"
                android:layout_marginEnd="@dimen/login_card_margin"
                card:cardBackgroundColor="@color/colorPrimary"
                android:transitionName="card"
                card:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_with_account"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:layout_marginBottom="16dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2px"
                        android:layout_marginBottom="8dp"
                        android:background="@color/colorPrimaryDark"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:textColorHint="@color/gray_hint">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/username"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginStart="32dp"
                            android:layout_marginRight="32dp"
                            android:layout_marginEnd="32dp"
                            android:theme="@style/MyEditTextTheme"
                            android:textColor="@color/gray_background"
                            android:hint="@string/email" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textColorHint="@color/gray_hint">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/gray_background"
                            android:theme="@style/MyEditTextTheme"
                            android:layout_marginLeft="32dp"
                            android:layout_marginStart="32dp"
                            android:layout_marginRight="32dp"
                            android:layout_marginEnd="32dp"
                            android:hint="@string/password" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_register"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/need_an_account"
                    android:layout_marginTop="16dp"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card:layout_anchor="@id/card"
            card:layout_anchorGravity="bottom|end"
            card:backgroundTint="@color/gray_fab"
            card:paddingEnd="32dp"
            android:src="@android:drawable/ic_menu_share"
            android:transitionName="fab"
            android:layout_marginRight="@dimen/login_fab_margin"
            android:layout_marginEnd="@dimen/login_fab_margin"/>

    </android.support.design.widget.CoordinatorLayout>

</ScrollView>